// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBody Render <AppBody> with data 1`] = `
<DocumentFragment>
  <div
    class="css-xt4orx"
    role="gamePanel"
  >
    <section
      class="css-1werspr"
      role="cellsGrid"
    >
      <div
        class="css-es8rv7"
        role="cellContainer-0"
      >
        <div
          class="css-zzdbx3"
          role="cellContent-0"
        />
      </div>
      <div
        class="css-2r18jt"
        role="cellContainer-1"
      >
        <div
          class="css-zzdbx3"
          role="cellContent-1"
        />
      </div>
      <div
        class="css-2r18jt"
        role="cellContainer-2"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-3"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-4"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-5"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-6"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-7"
      />
      <div
        class="css-1jbr29x"
        role="cellContainer-8"
      />
      <div
        class="css-es8rv7"
        role="cellContainer-9"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-10"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-11"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-12"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-13"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-14"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-15"
      />
      <div
        style="clear: both;"
      />
    </section>
  </div>
</DocumentFragment>
`;

exports[`AppBody Render <AppBody> without data 1`] = `
<DocumentFragment>
  <div
    class="css-xt4orx"
    role="gamePanel"
  >
    <section
      class="css-1werspr"
      role="cellsGrid"
    >
      <div
        class="css-es8rv7"
        role="cellContainer-0"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-1"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-2"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-3"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-4"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-5"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-6"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-7"
      />
      <div
        class="css-1jbr29x"
        role="cellContainer-8"
      />
      <div
        class="css-es8rv7"
        role="cellContainer-9"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-10"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-11"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-12"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-13"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-14"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-15"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-16"
      />
      <div
        class="css-1jbr29x"
        role="cellContainer-17"
      />
      <div
        class="css-es8rv7"
        role="cellContainer-18"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-19"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-20"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-21"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-22"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-23"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-24"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-25"
      />
      <div
        class="css-1jbr29x"
        role="cellContainer-26"
      />
      <div
        class="css-es8rv7"
        role="cellContainer-27"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-28"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-29"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-30"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-31"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-32"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-33"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-34"
      />
      <div
        class="css-1jbr29x"
        role="cellContainer-35"
      />
      <div
        class="css-es8rv7"
        role="cellContainer-36"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-37"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-38"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-39"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-40"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-41"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-42"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-43"
      />
      <div
        class="css-1jbr29x"
        role="cellContainer-44"
      />
      <div
        class="css-es8rv7"
        role="cellContainer-45"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-46"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-47"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-48"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-49"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-50"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-51"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-52"
      />
      <div
        class="css-1jbr29x"
        role="cellContainer-53"
      />
      <div
        class="css-es8rv7"
        role="cellContainer-54"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-55"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-56"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-57"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-58"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-59"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-60"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-61"
      />
      <div
        class="css-1jbr29x"
        role="cellContainer-62"
      />
      <div
        class="css-es8rv7"
        role="cellContainer-63"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-64"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-65"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-66"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-67"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-68"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-69"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-70"
      />
      <div
        class="css-1jbr29x"
        role="cellContainer-71"
      />
      <div
        class="css-es8rv7"
        role="cellContainer-72"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-73"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-74"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-75"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-76"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-77"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-78"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-79"
      />
      <div
        class="css-1jbr29x"
        role="cellContainer-80"
      />
      <div
        style="clear: both;"
      />
    </section>
  </div>
</DocumentFragment>
`;
